# IF3260-Car-Showcase

./: .gitignore  README.md
Asset/: asset_formatter.py  asset_to_binary.py
Asset/Dragon/: dotted dragon.psd  dragon_body.txt  dragon_head.txt  dragon_head_manual index.txt  dragon_horn.txt
Asset/Jeep/: jeep_body.txt  jeep_body_test.txt
Asset/Polygon/: polygon.txt
fifth-week/: .gitignore  Makefile  main.cpp
fifth-week/assets/: fragmentSmoke.glsl  fragmentSource.glsl  vertexLampSource.glsl  vertexRain.glsl  vertexSmoke.glsl
fifth-week/lib/: Camera.cpp  Camera.hpp  Shader.cpp
fifth-week/model/: Model.hpp
fifth-week/modules/: glad.c
fifth-week/objects/: Car.cpp  Car.hpp  Lamp.cpp  Lamp.hpp  Object.cpp  Object.hpp  Particles.cpp  Particles.hpp  Rain.cpp  Rain.hpp  Smoke.cpp  Smoke.hpp  SmokeGenerator.cpp  SmokeGenerator.hpp
first-week/: main.cpp  makefile
first-week/include/: glad.c
first-week/src/: glad.c
fourth-week/: main.cpp
fourth-week-b/: Makefile  main.cpp
fourth-week-b/assets/: fragmentLampSource.glsl  fragmentSource.glsl  jimny.blend  vertexLampSource.glsl  vertexSource.glsl
fourth-week-b/lib/: Camera.cpp  Shader.hpp
fourth-week-b/model/: Model.cpp
second-week-a/: main  main.cpp  makefile
second-week-b/: main.cpp  makefile
third-week/: main.cpp  makefile
third-week-b/: .gitignore  CMakeLists.txt  main.cpp
third-week-b/assets/: fragmentSource.glsl  jimny.blend  jimny.blend1  jimny.mtl  vertexSource.glsl
third-week-b/lib/: Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp
third-week-b/model/: Model.cpp  Model.hpp
(+59 files in other folders)
